# chemical_thesis_repo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  MATLAB_SETUP.md  README.md  WEEKLY_STRUCTURE.md  pyproject.toml  requirements.txt  run_experiment.py
.claude/: settings.local.json
.serena/: project.yml
2026_W04_Lstm_training_v1/new_app/: main.py  pyproject.toml
2026_W04_Lstm_training_v1/new_app/data/output/: basalt_25c_lstm_input_500pts.npy  basalt_25c_synth_1000pts.npz
2026_W04_Lstm_training_v1/new_app/outputs/lstm_overfit/: config.json  predictions.npz  scaler.pkl
2026_W04_Lstm_training_v1/new_app/outputs/lstm_overfit/checkpoints/: training_history_horizon_10.json
2026_W04_Lstm_training_v1/new_app/src/lstm_synth_data/: generate.py  lstm_trainer.py  params.py  visualize.py
archive/2026_W05_npoints_seq_len_experiment/app/: README.md  plot_results.py  pyproject.toml
archive/2026_W05_npoints_seq_len_experiment/app/data/: basalt_25c_lstm_input_1000pts.npy
archive/2026_W05_npoints_seq_len_experiment/app/outputs/n1000/seq_len_10/: result.json
archive/2026_W05_npoints_seq_len_experiment/app/outputs/n1000/seq_len_3/: trajectory.npz
archive/2026_W05_npoints_seq_len_experiment/app/src/experiment/: __init__.py  run_npoints_experiment.py
archive/2026_W05_seq_len_experiment/app/: pyproject.toml
archive/2026_W05_seq_len_experiment/app/data/: basalt_25c_synth_500pts.npz
archive/2026_W05_seq_len_experiment/app/outputs/seq_len_experiment/: config.json
archive/2026_W05_seq_len_experiment/app/src/lstm_experiment/: plot_all_variables.py
(+2469 files in other folders)
