[project]
name = "npoints-seq-len-experiment"
version = "0.1.0"
description = "N_POINTS vs SEQ_LEN scaling experiment for LSTM surrogate model"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
run-experiment = "experiment.run_npoints_experiment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiment"]
